# TLDR.skill

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
prototypes/startup_signal_radar/: README.md
prototypes/startup_signal_radar/config/: query_taxonomy.example.yaml
prototypes/startup_signal_radar/examples/: daily_report.example.json
prototypes/startup_signal_radar/fixtures/: reddit_sample.json  x_sample.json  xiaohongshu_sample.json
prototypes/startup_signal_radar/schemas/: opportunity_card.schema.json  problem_cluster.schema.json
prototypes/startup_signal_radar/src/: __init__.py  db.py  (+21 more)
prototypes/video_transcript_digest/: README.md
skills/video-link-transcript-digest/: SKILL.md
src/tldr_skill/: cli.py  llm.py  transcription.py  video_digest.py
tests/: test_video_digest.py
tests/prototypes/: test_startup_signal_channel_router.py  test_startup_signal_cli.py  test_startup_signal_cluster_identity.py  test_startup_signal_clustering.py  test_startup_signal_daily_radar.py  test_startup_signal_db.py  test_startup_signal_end_to_end.py  test_startup_signal_pipeline.py  test_startup_signal_pipeline_stateful.py  test_startup_signal_queries.py  test_startup_signal_radar.py  test_startup_signal_reasoning.py  test_startup_signal_reddit_collection_plan.py  test_startup_signal_reddit_live_preview.py  test_startup_signal_reddit_source.py  test_startup_signal_reporting.py  test_startup_signal_sources.py  test_startup_signal_state_store.py  test_startup_signal_watchlist.py  test_startup_signal_weekly_radar.py  test_startup_signal_x_source.py  test_video_digest.py
(+3 files in other folders)
