[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tldr-skill"
version = "0.1.0"
description = "Turn Xiaohongshu, Douyin, and YouTube links into cleaned transcripts, summaries, and reality checks"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "oierkid-crypto"}]
dependencies = [
  "openai>=2.0.0,<3",
  "requests>=2.32.0,<3",
]

[project.optional-dependencies]
video = [
  "yt-dlp>=2026.3.13",
  "youtube-transcript-api>=1.0.3,<2",
  "playwright>=1.58.0,<2",
  "faster-whisper>=1.1.0,<2",
]
dev = [
  "pytest>=8.0.0,<9",
  "pytest-asyncio>=0.23.0,<1",
]

[project.scripts]
tldr-skill = "tldr_skill.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
